Modified header.css to accomodate the header overlapping with the new fixed position of the navigation bar

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -9,4 +9,5 @@
   background-image: url("https://www.transparenttextures.com/patterns/always-grey.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   border-radius: 8px;
+  margin-top: 120px;
 }
